spinnaker/spinnaker-gate-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spin-gate
  namespace: spinnaker
spec:
  hosts:
  - "spinnaker-api.kubernetesclustertest.com"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: spin-gate.spinnaker.svc.cluster.local
        port:
          number: 8084
